# SoftEng2025

./: .bash_history  .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Dockerfile  HelloProj.sln  HelloProjConfig.cmake  HelloProjConfig.h  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  basic_target.cmake  cmake_install.cmake
cmake/: HelloProjConfig.h.in
include/basic/: message.h
mains/: CMakeLists.txt  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  hello.cpp
src/basic/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  basic.vcxproj  basic.vcxproj.filters  cmake_install.cmake  message.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test-hello.cpp  test-version.cpp  test_hello.vcxproj  test_hello.vcxproj.filters  test_version.vcxproj  test_version.vcxproj.filters
